@@ -143,6 +143,8 @@ public:
 	virtual void minimize() = 0;
 	virtual void maximize() = 0;
 
+	virtual bool isMaximized() const = 0;
+
 	// default no-op implementation
 	virtual void swapBuffers();
 
